# mmumpy

./: LICENSE  README.md  example.py  main.py  pyproject.toml  setup.py
mmumpy/: __init__.py  core.py  decorators.py
mmumpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
